# hadron

./: .gitignore  LICENSE  README.md  pyproject.toml
hadron2_env/: pyvenv.cfg
src/hadron/: README.md  app.py  carController.py  joystickController.py  mainRobot.py  streamOutput.py
src/hadron/mcp/: claude_desktop_config.json  mcp_server_hadron.py
src/hadron/static/: styles.css
src/hadron/templates/: index.html
src/hadron2/: carController.py  config.py  joystickController.py  main.py  mcp_wrapper.py  requirements.txt  streamOutput.py
src/hadron2/core/: __init__.py  camera_service.py  joystick_service.py  robot_service.py
src/hadron2/hadron_mcp/: __init__.py  hadron_server.py  ws_mcp.py
src/hadron2/web/: __init__.py  control_server.py  video_server.py  websocket_server.py
