[project]
name = "hadron"
version = "0.1.0"
description = "Robot en devenir"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adafruit-circuitpython-crickit>=2.3.19",
    "flask>=3.1.0",
    "lgpio>=0.2.2.0",
    "picamera2>=0.3.25",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
