[project]
name = "hadron"
version = "0.1.0"
description = "Robot en devenir"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "websockets>=12.0", 
]

[project.optional-dependencies]
robot = [
    "adafruit-circuitpython-crickit>=2.3.19; platform_machine == 'armv7l'",
    "lgpio>=0.2.2.0; platform_machine == 'armv7l'",
    "picamera2>=0.3.25; platform_machine == 'armv7l'",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
]
mcp = [
     "httpx>=0.27.0",
     "mcp>=1.9.0",
     "numpy>=1.24.0",
     "opencv-python>=4.8.0",
]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
