[project]
name = "hadron"
version = "0.1.0"
description = "Robot en devenir"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=15.0.1",
]

[project.optional-dependencies]
robot = [
    "adafruit-circuitpython-crickit>=2.3.20",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "lgpio>=0.2.2.0",
    "picamera2>=0.3.27",
    "uvicorn>=0.34.2",
    "uvloop>=0.21.0",
]
mcp = []
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
